kubernetes/networkpolicies/allow-worker-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-to-db
  namespace: bank-app
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
  - from:
      podSelector:
        matchLabels:
          app: worker
